--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,13 +1,15 @@
-- name: Dr. Richard Feynman
+- name: Dr. WANG Rongkun
   photo: headshot.jpg
-  info: Richard C. Tolman Professor, California Institute of Technology
-  email: richard@university.edu
-  github: https://github.com/
-  researchgate: https://www.researchgate.net/
-  scholar: https://scholar.google.com/citations?user=B7vSqZsAAAAJ
+  info:  Postdoctoral Researcher,  Harvard University
+  email: wangrongkun@g.harvard.edu
+  github: https://github.com/RongkunWang
+  gitlab: https://gitlab.cern.ch/rowang
   cv: cv/cv.pdf
+  inspire: https://inspirehep.net/authors/1496941
+  # researchgate: https://www.researchgate.net/
+  # scholar: https://scholar.google.com/citations?user=B7vSqZsAAAAJ
   # Change the number below to the number of "educations" you have (up to 6)
-  number_educ: 2
+  number_educ: 0
   education1: "(1942) Ph.D. Physics, Princeton University"
   education2: "(1939) B.S. Physics, Massachusetts Institute of Technology"
   # education3: 
